Update menu data and fix price layout to keep price visible

--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,36 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Manrope:wght@200..800&display=swap');
 
 body {
   margin: 0; /* soft parchment beige */
   background-color: #180e08; 
-  color: #fff1a1; /* deep espresso brown */
+  color: #FFFAFA ;
+  text-shadow: 1px solid black; /* deep espresso brown */
   font-family: "Manrope", sans-serif;
 }
 
 .app-container {
   max-width: 800px;
   margin: 0rem auto;
-  padding: 1rem 2rem;
+  padding: .5rem 2rem;
 }
 
 header {
   text-align: center;
   margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   
 }
 
-header h1 {
-  font-size: 3rem;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
+.header_container{
+  max-width: 400px;
+}
+
+.header_container > img{
+  width: 100%;
 }
 
 .subtitle {
@@ -40,7 +47,7 @@ header h1 {
 }
 
 .category-title {
-  font-size: 2.1rem;
+  font-size: 1.5rem;
   color: #f5ba18; /* wine red */
    /* taupe divider */
    margin: 0;
@@ -66,14 +73,18 @@ header h1 {
 }
 
 .dish-name {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 800;
+  flex: 1;          
+  word-wrap: break-word;
 }
 
 .dish-price {
   font-size: 1rem;
-  color: #d4a373; /* rustic terracotta */
+  color: #FFFAFA ; 
   font-weight: 800;
+  flex-shrink: 0;    
+  white-space: nowrap;
 }
 
 .dish-description {
