--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,2 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.2;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #fdfaf6;
-
-}
 
